[gd_scene load_steps=3 format=3 uid="uid://cd57oukiasgkd"]

[ext_resource type="Script" uid="uid://vu4md3iggspv" path="res://UI/custom_game.gd" id="1_y11ci"]
[ext_resource type="Theme" uid="uid://casn4am21hdpi" path="res://themes/buttonThemes/basic_button.tres" id="2_k4c83"]

[node name="CustomGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y11ci")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CUSTOM GAME"
horizontal_alignment = 1

[node name="Infected" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Infected"

[node name="Rounds" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Rounds"]
layout_mode = 2
text = "Best of: "

[node name="rounds" type="SpinBox" parent="VBoxContainer/Rounds"]
layout_mode = 2
min_value = 5.0
max_value = 15.0
step = 2.0
value = 5.0

[node name="StarterPowerUps" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/StarterPowerUps"]
layout_mode = 2
text = "Starting power-ups:"

[node name="starterPUps" type="SpinBox" parent="VBoxContainer/StarterPowerUps"]
layout_mode = 2
max_value = 6.0

[node name="loserMutator" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Mutator to the loser"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 566.0
offset_top = 249.0
offset_right = 574.0
offset_bottom = 257.0
text = "START!"

[node name="back" type="Button" parent="."]
modulate = Color(0.41568628, 0.41568628, 0.41568628, 1)
layout_mode = 0
offset_left = 14.0
offset_top = 602.0
offset_right = 59.0
offset_bottom = 633.0
theme = ExtResource("2_k4c83")
text = "Back"

[connection signal="toggled" from="VBoxContainer/Infected" to="." method="_on_check_box_toggled"]
[connection signal="value_changed" from="VBoxContainer/Rounds/rounds" to="." method="_on_rounds_value_changed"]
[connection signal="value_changed" from="VBoxContainer/StarterPowerUps/starterPUps" to="." method="_on_starter_p_ups_value_changed"]
[connection signal="toggled" from="VBoxContainer/loserMutator" to="." method="_on_loser_mutator_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
